fix: Update styling for improved text visibility and responsiveness in various sections

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -106,6 +106,10 @@ body {
 }
 
 
+.text-dashed {
+  font-variant-numeric:slashed-zero
+}
+
 .text-tile-inter-smd {
   font-family: "Inter_Display_Md";
   font-weight: 500;
